--- a/packages/SystemUI/res/layout/status_bar.xml
+++ b/packages/SystemUI/res/layout/status_bar.xml
@@ -47,6 +47,16 @@
         android:orientation="horizontal"
         >
 
+        <ImageView
+            android:id="@+id/left_cosmic_logo"
+            android:layout_width="@dimen/status_bar_icon_size"
+            android:layout_height="match_parent"
+            android:paddingEnd="4dip"
+            android:src="@drawable/ic_status_bar_cosmic_logo"
+            android:scaleType="center"
+            android:visibility="gone"
+            />
+            
         <!-- The alpha of this area is controlled from both PhoneStatusBarTransitions and
              PhoneStatusBar (DISABLE_NOTIFICATION_ICONS). -->
         <com.android.systemui.statusbar.AlphaOptimizedFrameLayout
@@ -89,6 +99,16 @@
                 android:paddingStart="@dimen/status_bar_clock_starting_padding"
                 android:paddingEnd="@dimen/status_bar_clock_end_padding"
                 android:gravity="center_vertical|start"
+                />
+
+            <ImageView
+                android:id="@+id/cosmic_logo"
+                android:layout_width="@dimen/status_bar_icon_size"
+                android:layout_height="match_parent"
+                android:paddingStart="4dp"
+                android:src="@drawable/ic_status_bar_cosmic_logo"
+                android:scaleType="center"
+                android:visibility="gone"
                 />
         </com.android.keyguard.AlphaOptimizedLinearLayout>
     </LinearLayout>
