--- a/packages/SystemUI/res/drawable/volte.xml
+++ b/packages/SystemUI/res/drawable/volte.xml
@@ -32,6 +32,12 @@
     android:height="24dp"
     android:viewportHeight="24.0"
     android:viewportWidth="28.0">
+ 
+ <group
+      android:translateX="0"
+      android:translateY="-5"
+      android:scaleX="1"
+      android:scaleY="1.5">
     <path
         android:fillColor="#FFFFFF"
         android:pathData="M9.26,11.671c-0.206,0 -0.377,0.086 -0.511,0.259c-0.135,0.172 -0.202,0.434 -0.202,0.785c0,0.357 0.066,0.621 0.2,0.791c0.133,0.172 0.301,0.256 0.503,0.256c0.203,0 0.371,-0.084 0.502,-0.252s0.196,-0.438 0.196,-0.811c0,-0.345 -0.065,-0.604 -0.198,-0.773C9.62,11.756 9.457,11.671 9.26,11.671z" />
